--- a/cognipy/CogniPyUnitTests/CogniPyUnitTests.csproj
+++ b/cognipy/CogniPyUnitTests/CogniPyUnitTests.csproj
@@ -99,9 +99,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestFiles\biopax.owl" />
-    <Content Include="TestFiles\BAMS.owl" />
-    <Content Include="TestFiles\AEO.owl" />
+    <None Include="TestFiles\BAMS.owl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="TestFiles\AEO.owl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
