test ontologies upload

--- a/cognipy/CogniPyUnitTests/CogniPyUnitTests.csproj
+++ b/cognipy/CogniPyUnitTests/CogniPyUnitTests.csproj
@@ -70,22 +70,16 @@
     <None Include="TestFiles\ModelWithGraph.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="TestFiles\Ont-sr10.encnl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="TestFiles\Ont.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="TestFiles\ont2.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="TestFiles\RODO.encnl">
+    <None Include="TestFiles\TestOnto2.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="TestFiles\SFO.encnl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestFiles\TelstraDev.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="TestFiles\TestOntology.encnl">
@@ -94,7 +88,7 @@
     <None Include="TestFiles\TestTBox.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="TestFiles\WingsTelstraModelWithGraph.encnl">
+    <None Include="TestFiles\TestOnto.encnl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
