--- a/cognipy/CogniPyLib/packages.config
+++ b/cognipy/CogniPyLib/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="IKVM" version="8.1.5717.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
