--- a/cognipy/CogniPyLib/packages.config
+++ b/cognipy/CogniPyLib/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="IKVM" version="8.1.5717.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NMemory" version="1.1.2" targetFramework="net48" />
 </packages>
